<resources>
    <string name="app_name">My Watchlist</string>

    <string name="tab_text_1">Movies</string>
    <string name="tab_text_2">TV Shows</string>
    <string name="title_movies">Movie Titles</string>
    <string name="overview_movies">Overview</string>
    <string name="title_tvshows">TV Shows Titles</string>
    <string name="overview_tvshows">Overview</string>
    <string name="menu_1">Change Language Settings</string>
    <string name="menu_2">Favorite</string>
    <string name="menu_3">Favorite List</string>
    <string name="search">Search</string>

    <string name="poster">Poster</string>
    <string name="favorite_list">Your Favorite Movies</string>
    <string name="poster_description">Poster Description</string>

    <string name="search_hint">Input Keyword</string>
</resources>
