<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <group android:menuCategory="container">
        <item
            android:id="@+id/action_favorite_list"
            android:title="@string/menu_3"
            android:icon="@drawable/ic_favorite_black_48dp"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_change_settings"
            android:title="@string/menu_1"
            app:showAsAction="never"/>
    </group>
</menu>